--- a/front-angular/src/app/courses/courses/courses.component.html
+++ b/front-angular/src/app/courses/courses/courses.component.html
@@ -1,1 +1,25 @@
-<p>courses works!</p>
+<table mat-table [dataSource]="courses" class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <!-- Name Column -->
+
+  <!-- A associação deve ser usar um nome exatamente como na interface -->
+  <ng-container matColumnDef="name">
+    <!-- Título da coluna -->
+    <th mat-header-cell *matHeaderCellDef> Nome </th>
+    <!-- O angular cria uma variável 'temporária', para que você possa usar dentro da cálula da tabela -->
+    <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
+  </ng-container>
+
+  <!-- Category Column -->
+  <ng-container matColumnDef="category">
+    <th mat-header-cell *matHeaderCellDef> Category </th>
+    <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
