--- a/front-angular/src/app/courses/courses/courses.component.html
+++ b/front-angular/src/app/courses/courses/courses.component.html
@@ -1,25 +1,32 @@
-<table mat-table [dataSource]="courses" class="mat-elevation-z8">
+<mat-card>
 
-  <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
+  <mat-toolbar>
+      <span>Cursos Disponíveis</span>
+  </mat-toolbar>
 
-  <!-- Name Column -->
+  <table mat-table [dataSource]="courses" class="mat-elevation-z8">
 
-  <!-- A associação deve ser usar um nome exatamente como na interface -->
-  <ng-container matColumnDef="name">
-    <!-- Título da coluna -->
-    <th mat-header-cell *matHeaderCellDef> Nome </th>
-    <!-- O angular cria uma variável 'temporária', para que você possa usar dentro da cálula da tabela -->
-    <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
-  </ng-container>
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
 
-  <!-- Category Column -->
-  <ng-container matColumnDef="category">
-    <th mat-header-cell *matHeaderCellDef> Category </th>
-    <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
-  </ng-container>
+    <!-- Name Column -->
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+    <!-- A associação deve ser usar um nome exatamente como na interface -->
+    <ng-container matColumnDef="name">
+      <!-- Título da coluna -->
+      <th mat-header-cell *matHeaderCellDef> Nome </th>
+      <!-- O angular cria uma variável 'temporária', para que você possa usar dentro da cálula da tabela -->
+      <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
+    </ng-container>
 
+    <!-- Category Column -->
+    <ng-container matColumnDef="category">
+      <th mat-header-cell *matHeaderCellDef> Category </th>
+      <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+</mat-card>
