--- a/front-angular/src/app/courses/courses/courses.component.html
+++ b/front-angular/src/app/courses/courses/courses.component.html
@@ -1,32 +1,39 @@
 <mat-card>
-
   <mat-toolbar>
-      <span>Cursos Disponíveis</span>
+    <span>Cursos Disponíveis</span>
   </mat-toolbar>
 
-  <table mat-table [dataSource]="courses" class="mat-elevation-z8">
+  <!-- ngIf - Se eu tenho dados do curso, mostre a tabela, se não, mostre o loading -->
+  <div *ngIf="courses$ | async as courses; else loading">
+    <table mat-table [dataSource]="courses" class="mat-elevation-z8">
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
+      <!-- Name Column -->
 
-    <!-- Name Column -->
+      <!-- A associação deve ser usar um nome exatamente como na interface -->
+      <ng-container matColumnDef="name">
+        <!-- Título da coluna -->
+        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <!-- O angular cria uma variável 'temporária', para que você possa usar dentro da cálula da tabela -->
+        <td mat-cell *matCellDef="let course">{{ course.name }}</td>
+      </ng-container>
 
-    <!-- A associação deve ser usar um nome exatamente como na interface -->
-    <ng-container matColumnDef="name">
-      <!-- Título da coluna -->
-      <th mat-header-cell *matHeaderCellDef> Nome </th>
-      <!-- O angular cria uma variável 'temporária', para que você possa usar dentro da cálula da tabela -->
-      <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
-    </ng-container>
+      <!-- Category Column -->
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef>Category</th>
+        <td mat-cell *matCellDef="let course">{{ course.category }}</td>
+      </ng-container>
 
-    <!-- Category Column -->
-    <ng-container matColumnDef="category">
-      <th mat-header-cell *matHeaderCellDef> Category </th>
-      <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
-    </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+  <ng-template #loading>
+    <div class="loading-spinner">
+      <mat-spinner></mat-spinner>
+    </div>
+  </ng-template>
 
 </mat-card>
