--- a/front-angular/src/app/courses/courses/courses.component.html
+++ b/front-angular/src/app/courses/courses/courses.component.html
@@ -9,13 +9,13 @@
       <!--- Note that these columns can be defined in any order.
             The actual rendered columns are set as a property on the row definition" -->
 
-      <!-- ID Column -->
+      <!-- ID Column
       <ng-container matColumnDef="_id">
         <th mat-header-cell *matHeaderCellDef>ID</th>
         <td mat-cell *matCellDef="let course">{{ course._id }}
           <mat-icon aria-hidden="false" aria-label="Categoria do curso">{{ course._id }}</mat-icon>
         </td>
-      </ng-container>
+      </ng-container> -->
 
       <!-- Name Column -->
 
@@ -35,10 +35,31 @@
         </td>
       </ng-container>
 
+      <!-- Action Column -->
+      <ng-container matColumnDef="actions">
+        <mat-header-cell *matHeaderCellDef>
+          <button mat-mini-fab color="accent" aria-label="Adicionar um curso">
+            <mat-icon (click)="onAdd()">add</mat-icon>
+          </button>
+        </mat-header-cell>
+
+        <mat-cell *matCellDef="let course">
+          <button mat-icon-button color="primary" aria-label="Editar Curso">
+            <mat-icon>edit</mat-icon>
+          </button>
+
+          <button mat-icon-button color="warn" aria-label="Editar Curso">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </mat-cell>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
   </div>
+
+
 
   <ng-template #loading>
     <div class="loading-spinner">
