--- a/front-angular/src/app/courses/course-form/course-form.component.html
+++ b/front-angular/src/app/courses/course-form/course-form.component.html
@@ -4,15 +4,20 @@
   </mat-toolbar>
 
   <mat-card-content>
-    <form [formGroup]="form">
+    <form [formGroup]="form" class="min-width">
       <mat-form-field class="full-width">
         <!--Associação com o name do construtor, no course-form.component-->
         <input matInput placeholder="Nome" formControlName="name">
       </mat-form-field>
 
       <mat-form-field class="full-width">
+        <mat-label>Categoria</mat-label>
         <!--Associação com o name do construtor, no course-form.component-->
-        <input matInput placeholder="Categoria" formControlName="category">
+        <mat-select formControlName="category">
+          <mat-option value="null"></mat-option>
+          <mat-option value="front-end">Front-End</mat-option>
+          <mat-option value="back-end">Back-End</mat-option>
+        </mat-select>
       </mat-form-field>
     </form>
   </mat-card-content>
