--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -1,18 +1,25 @@
-<table mat-table [dataSource]="courses" class="mat-elevation-z8">
+<mat-card>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Nome </th>
-    <td mat-cell *matCellDef="let course"> {{course.name}} </td>
-  </ng-container>
+  <mat-toolbar color="primary">
+      Cursos disponíveis
+  </mat-toolbar>
 
-  <!-- Category Column -->
-  <ng-container matColumnDef="category">
-    <th mat-header-cell *matHeaderCellDef> Categoria </th>
-    <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
-  </ng-container>
+  <table mat-table [dataSource]="courses" class="mat-elevation-z8">
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Nome </th>
+      <td mat-cell *matCellDef="let course"> {{course.name}} </td>
+    </ng-container>
+
+    <!-- Category Column -->
+    <ng-container matColumnDef="category">
+      <th mat-header-cell *matHeaderCellDef> Categoria </th>
+      <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</mat-card>
 
